<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#000000">
tools:context=".VerOperador">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#CFBF2E"
            app:title="@string/app_name"
            tools:ignore="MissingConstraints">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:src="@drawable/logo"/>
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="231dp"
            android:layout_height="290dp"
            android:layout_gravity="center"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/nick"
                    android:textColor="#FFC107"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:background="#D1202020"
                    android:minHeight="48dp"
                    android:paddingLeft="10dp"
                    android:textColor="#DFDFDF"
                    android:textSize="20sp"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:autofillHints=""
                    android:inputType="" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/OperatorName"
                    android:textColor="#FFC107"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:background="#D1202020"
                    android:minHeight="48dp"
                    android:paddingLeft="10dp"
                    android:textColor="#DFDFDF"
                    android:textSize="20sp"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:importantForAutofill="no" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/hability"
                    android:textColor="#FFC107"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:background="#D1202020"
                    android:minHeight="48dp"
                    android:paddingLeft="10dp"
                    android:textColor="#DFDFDF"
                    android:textSize="20sp"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/org"
                    android:textColor="#FFC107"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:background="#D1202020"
                    android:minHeight="48dp"
                    android:paddingLeft="10dp"
                    android:textColor="#DFDFDF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/type"
                    android:textColor="#FFC107"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:background="#D1202020"
                    android:minHeight="48dp"
                    android:paddingLeft="10dp"
                    android:textColor="#DFDFDF"
                    android:textSize="20sp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:layout_marginTop="5dp"
                    android:clickable="true"
                    app:srcCompat="@drawable/ic_baseline_mode_edit_24"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabguardar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:layout_marginTop="5dp"
                    android:clickable="true"
                    app:srcCompat="@drawable/ic_baseline_save_24" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabdelete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:layout_marginTop="5dp"
                    android:clickable="true"
                    app:srcCompat="@drawable/ic_baseline_delete_24" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>